...
                                                        <integer key="value" value="1"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="nameField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                        <integer key="value" value="3"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="emailField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                        <integer key="value" value="2"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="cardField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                        <integer key="value" value="2"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="aboutField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                    <userDefinedRuntimeAttribute type="image" keyPath="titleImage" value="key"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Пароль"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="passwordField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                        <integer key="value" value="1"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="confirmPasswordField"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DB0-MI-g3Y">
                                                <rect key="frame" x="0.0" y="700" width="375" height="100"/>
                                                <accessibility key="accessibilityConfiguration" label="registerButton"/>
                                                <state key="normal" title="Зарегистрироваться"/>
                                                <connections>
...
