...
            <point key="canvasLocation" x="-567" y="667"/>
        </scene>
        <!--Пользователь-->
        <scene sceneID="Fl4-Dd-95G">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TXo-hE-M55" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Пользователь" image="username" id="iaL-Q1-aDZ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tt4-Xe-mQW">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
