...
                                        <connections>
                                            <segue destination="61b-bp-x75" kind="presentation" identifier="changeUserSegue" modalTransitionStyle="coverVertical" id="TZz-Yz-vK6"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mbm-nx-DNJ">
                                        <rect key="frame" x="148.5" y="40" width="46" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="logoutButton"/>
                                        <state key="normal" title="Выйти"/>
                                        <connections>
                                            <action selector="exitButtoDidTab:" destination="sDL-0Q-Xom" eventType="touchUpInside" id="4rH-pp-cIO"/>
                                        </connections>
                                    </button>
                                </subviews>
...
